--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,41 +10,37 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
-      env:
-        HOST: localhost
-        PORT: 5432
-        USER: root
-        PASSWORD: root
-        DBNAME: root
     strategy:
       matrix:
-        go_version: ['1.18', '1.17', '>=1.18']
-        os: ['ubuntu-lastet', 'ubuntu-18.04']
+        go_version: ['1.18', '1.17']
+    env:
+      HOST: localhost
+      PORT: 5432
+      USER: root
+      PASSWORD: root
+      DBNAME: root
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v3
-      with:
-        go-version: ${{ matrix.go_version }}
-      
-    - name: Build-DB
-      run: docker-compose build
-      
-    - name: Create-DB
-      run: docker-compose up -d
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ matrix.go_version }}
+        
+      - name: Build-DB
+        run: docker-compose build
+        
+      - name: Create-DB
+        run: docker-compose up -d
 
-    - name: Test
-      run: go test -v main_test.go 
-      
-  
+      - name: Test
+        run: go test -v main_test.go 
+        
+
   build:
     needs: test
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: ['ubuntu-latest', 'ubuntu-18.04']
+    runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Build
-      run: go build -v main.go
+      - uses: actions/checkout@v3
+      - name: Build
+        run: go build -v main.go
