--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -63,3 +63,12 @@ jobs:
         run: docker build -t my-image .
       - name: Push Docker image
         run: docker push my-image
+
+  download-artifact:
+    name: Download a Build Artifact
+    needs: docker
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v3.0.0
+        with:
+          name: programa
